# GraphNss

./: .gitignore  Dockerfile  README.md  docker-compose.yml  vercel.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: graph.py  grid_island.py  health.py  timetabling.py  tsp.py
backend/app/core/: config.py
backend/app/schemas/: graph.py  grid_island.py  timetabling.py  tsp.py
backend/app/services/: graph_algorithms.py  grid_island_algorithms.py  timetabling_algorithms.py  tsp_algorithms.py
backend/tests/: test_graph.py  test_grid_island.py  test_health.py
frontend/: README.md  package-lock.json  package.json
testcases/: README.md
testcases/01_dfs/: tc1_grid_20node.txt  tc2_directed_star_chain_21node.txt
testcases/02_bfs/: tc1_cycle_c20.txt  tc2_binary_tree_15node.txt
testcases/03_cek_lintasan/: tc1_chain_lintasan_ada.txt  tc2_directed_tidak_ada_lintasan.txt
testcases/04_cek_keterhubungan/: tc1_grid_terhubung.txt  tc2_empat_komponen_terpisah.txt
testcases/05_cari_komponen/: tc1_tiga_komponen_berbeda.txt  tc2_directed_empat_komponen_lemah.txt
testcases/06_komponen_terbesar/: tc1_komponen_jelas_terbesar.txt  tc2_jaringan_sosial_tersegmentasi.txt
testcases/07_cek_bipartite/: tc1_bipartite_k45.txt  tc2_petersen_bukan_bipartite.txt  tc3_grid_bipartite_20node.txt
testcases/08_diameter/: tc1_rantai_p20_diameter_max.txt  tc2_grid_4x5_diameter_7.txt  tc3_tidak_terhubung_diameter_inf.txt
testcases/09_deteksi_siklus/: tc1_petersen_ada_siklus.txt  (+2 more)
(+38 files in other folders)
